<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_green"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".sciencegroup.ScienceActivity">

    <!--    science Section start-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_off_white"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <!-- Toggle Button with Vector Image -->
        <LinearLayout
            android:id="@+id/sc_toggle_button"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_gravity="start"
            android:background="@drawable/gradient_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:background="@drawable/round_background"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="S"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/science"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sc_toggle_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:src="@drawable/right_arrow" />

            </LinearLayout>


        </LinearLayout>

        <!-- Collapsible View -->

        <LinearLayout
            android:id="@+id/sc_collapsible_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <!-- line 1-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"

                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/sc_board_book_id"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:background="@drawable/background_gradiant"
                        android:padding="16dp"
                        android:text="@string/board_book"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/sc_guide_book_id"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:background="@drawable/background_gradiant"
                        android:padding="16dp"
                        android:text="@string/guide_book"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <Button
                        android:id="@+id/sc_hand_note_id"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/background_gradiant"
                        android:padding="16dp"
                        android:text="@string/hand_note"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <!--   science Section end-->

</LinearLayout>